# The name of our project is "LPCOMPARE". CMakeLists files in this project can 
# refer to the root source directory of the project as ${LPCOMPARE_SOURCE_DIR} and 
# to the root binary directory of the project as ${LPCOMPARE_BINARY_DIR}. 
cmake_minimum_required (VERSION 2.6) 
project (LPCOMPARE) 

add_subdirectory (cplexlpcompare) 
